forever fixing stupid shit

--- a/app/components/dashboard/views/find/findRide.html
+++ b/app/components/dashboard/views/find/findRide.html
@@ -2,9 +2,9 @@
   <div class="section find_a_ride" id="dashboard-start" layout="column" layout-align="center top">
 
     <div layout="row" layout-align="center">
-      <div layout="column" layout-align="top" flex-gt-md="55" style="overflow-y: auto;">
+      <div layout="column" layout-align="top" flex-gt-md="55" >
         <div layout="row">
-        <md-card flex="100">
+        <md-card flex="100" style="margin: 8px 0px;">
           <md-card-content id="find-ride-form">
             <form>
               <div layout-gt-sm="row" layout="column">
@@ -57,16 +57,17 @@
         <div layout="row" id="ride-list-container" flex>
           <md-list flex="100">
             <md-list-item class="found_rides" style="background-color:#ECECEC;" class="md-2-line" ng-repeat="ride in rides" ng-cloak>
-                <div layout="row" layout-align="right" flex="100">
-                    <div layout="column" flex="15">
+                <div layout="row" flex="100">
+                    <div layout="row" flex="85">
                         <img ng-click="showProfile($event, ride.user)" ng-src="{{ride.img_url}}" class="md-avatar-find"/>
-                    </div>
-                    <div class="md-list-item-text" layout-align="left" layout="column" flex="70">
-                        <h3 style="margin:4px 1px 1px 1px; font-weight:bold; line-height: 1.1em;">{{ride.comment}}</h3>
-                        <h4 style="margin:1px; font-weight:normal;"><b>SEATS</b> {{ride.seats_left}}</h4>
-                        <h4 style="margin:1px; font-weight:normal;"><b>PRICE</b> ${{ride.seat_price}}</h4>
-                        <h4 style="margin:1px; font-weight:normal;"><b>DATE</b> {{ride.start_time}}</h4>
-                        <h4 style="margin:1px 4px 1px 1px; font-weight:normal;"><b>VEHICLE</b> {{ride.vehicle.year}} {{ride.vehicle.make}} {{ride.vehicle.model}}</h4>
+<!--                    class="md-list-item-text"-->
+                        <div style="display: inline-block; float: right;" >
+                            <h3 style="margin:4px 1px 1px 1px; font-weight:bold; line-height: 1.1em;">{{ride.comment}}</h3>
+                            <h4 style="margin:1px; font-weight:normal;"><b>SEATS</b> {{ride.seats_left}}</h4>
+                            <h4 style="margin:1px; font-weight:normal;"><b>PRICE</b> ${{ride.seat_price}}</h4>
+                            <h4 style="margin:1px; font-weight:normal;"><b>DATE</b> {{ride.start_time}}</h4>
+                            <h4 style="margin:1px 4px 1px 1px; font-weight:normal;"><b>VEHICLE</b> {{ride.vehicle.year}} {{ride.vehicle.make}} {{ride.vehicle.model}}</h4>
+                        </div>
                     </div>
                     <div layout="column" flex="15">
                       <md-button class="md-accent md-raised" ng-click="showPayment($event, ride, $index)">
