forever just pretending this is mobile friendly

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -357,3 +357,15 @@ md-toolbar {
 
 }
 
+#dashboard_button_1_gt {
+    margin: 15px 15px 7.5px 15px;
+}
+#dashboard_button_2_gt {
+    margin: 7.5px 15px 7.5px 15px;
+}
+#dashboard_button_3_gt {
+    margin: 7.5px 15px 15px 15px;
+
+}
+
+
