--- a/app/components/dashboard/views/begin.html
+++ b/app/components/dashboard/views/begin.html
@@ -51,7 +51,7 @@
         </div>
     </md-sidenav>
 
-    <div layout="column" id="dashboard_background" flex="82" layout-align="center center" >
+    <div layout="column" id="dashboard_background" flex="82" layout-align="center center" hide show-gt-sm >
       <div id="dashboard-home-grid" layout="row">
             <div ng-click="showVehicleForm($event)" id="dashboard_button_1" class="dashboard-button">
                 <h3>ADD A VEHICLE</h3>
@@ -60,6 +60,21 @@
               <h3>FIND A RIDE</h3>
             </div>
             <div class="dashboard-button" id="dashboard_button_3" ui-sref="^.post.info">
+                <h3>POST A RIDE</h3>
+            </div>
+        </div>
+
+    </div>
+    
+    <div layout="row" id="dashboard_background" flex="82" layout-align="center center" hide-gt-sm>
+      <div id="dashboard-home-grid" layout="column">
+            <div ng-click="showVehicleForm($event)" id="dashboard_button_1_gt" class="dashboard-button">
+                <h3>ADD A VEHICLE</h3>
+            </div>
+            <div class="dashboard-button" id="dashboard_button_2_gt" ui-sref="^.find">
+              <h3>FIND A RIDE</h3>
+            </div>
+            <div class="dashboard-button" id="dashboard_button_3_gt" ui-sref="^.post.info">
                 <h3>POST A RIDE</h3>
             </div>
         </div>
