--- a/app/components/dashboard/views/post/postRideInfo.html
+++ b/app/components/dashboard/views/post/postRideInfo.html
@@ -2,7 +2,7 @@
   <div class="section find_a_ride" id="dashboard-start" layout="column" layout-align="center top">
 
 
-          
+
     <div layout="row" layout-align="center">
       <div layout="column" layout-align="top" flex="55" style="overflow-y: auto;">
         <div layout="row">
@@ -96,6 +96,7 @@
                 <p id="error6" style="color:#d9534f"></p>
                 <p id="error7" style="color:#d9534f"></p>
                 <p id="error8" style="color:#d9534f"></p>
+                <p id="error9" style="color:#d9534f"></p>
 
           </md-list>
         </div>
