--- a/app/components/profile/views/profileFormTmpl.html
+++ b/app/components/profile/views/profileFormTmpl.html
@@ -21,10 +21,10 @@
                                 </div>
                                 <div layout="column" flex="85">
                                     <h4 style="margin:0px;"><b>COMPREHENSIVE RATING</b></h4>
-                                    <h5 style="margin:1px;"><b>DRIVER ABILITY</b> {{avg.driver_ability}}</h5>
-                                    <h5 style="margin:1px;"><b>COMFORT</b> {{avg.comfort}}</h5>
-                                    <h5 style="margin:1px;"><b>PRICE FAIRNESS</b> {{avg.price_fairness}}</h5>
-                                    <h5 style="margin:1px;"><b>OVERALL</b> {{avg.overall}}</h5>
+                                    <h5 style="margin:1px;"><b>DRIVER ABILITY</b> {{avg.driver_ability.toFixed(1)}}</h5>
+                                    <h5 style="margin:1px;"><b>COMFORT</b> {{avg.comfort.toFixed(1)}}</h5>
+                                    <h5 style="margin:1px;"><b>PRICE FAIRNESS</b> {{avg.price_fairness.toFixed(1)}}</h5>
+                                    <h5 style="margin:1px;"><b>OVERALL</b> {{avg.overall.toFixed(1)}}</h5>
                                 </div>
                             </div>
                             <md-divider></md-divider>
